# doodleJump

./: CMakeLists.txt  README.md  main.cpp
Logic/: AbstractFactory.cpp  AbstractFactory.h  Camera.cpp  Camera.h  EntityLogic.cpp  EntityLogic.h  IWindow.cpp  IWindow.h  Observer.cpp  Observer.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h
Representation/: ConcreteFactory.cpp  ConcreteFactory.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Window.cpp  Window.h
